--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "OpenShift-Sample-App",
+  "name": "hellonode",
   "version": "1.0.0",
-  "description": "OpenShift Sample Application",
+  "description": "Sample Hello Node OpenShift application",
   "keywords": [
     "OpenShift",
     "Node.js",
@@ -9,14 +9,14 @@
     "openshift"
   ],
   "author": {
-    "name": "OpenShift",
-    "email": "ramr@example.org",
-    "url": "http://www.openshift.com/"
+    "name": "Ishan",
+    "email": "ishanatmuzaffarpur@gmail.com",
+    "url": "http://ishanatmuz.wordpress.com/"
   },
-  "homepage": "http://www.openshift.com/",
+  "homepage": "http://hellonode-ishanatmuz.rhcloud.com/",
   "repository": {
     "type": "git",
-    "url": "https://github.com/openshift/origin-server"
+    "url": "https://github.com/ishanatmuz/helloNodeOpenShift"
   },
 
   "engines": {
@@ -29,6 +29,6 @@
   "devDependencies": {},
   "bundleDependencies": [],
 
-  "private": true,
+  "private": false,
   "main": "server.js"
 }
