--- a/package.json
+++ b/package.json
@@ -18,18 +18,16 @@
     "type": "git",
     "url": "https://github.com/ishanatmuz/helloNodeOpenShift"
   },
-
   "engines": {
     "node": ">= 0.6.0",
     "npm": ">= 1.0.0"
   },
-
   "dependencies": {
-      "mongodb": "^1.4.30"
+    "mongodb": "^1.4.38",
+    "obfus": "^1.1.9"
   },
   "devDependencies": {},
   "bundleDependencies": [],
-
   "private": false,
   "main": "server.js"
 }
